<resources>
    <string name="app_name">Profiler</string>
    <string name="menu_help">Help</string>
    <string name="what_does_this_app_do">What does this app do?</string>
    <string name="app_usage">A profile is a setting which will be applied in the future(if enabled) for a specified time duration for every day of the week. The previous volume settings will be retained once the time duration is over.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="chart">Chart</string>
    <string name="profile_timeline">Graph</string>
    <string name="profile_list">Profiles</string>
    <string name="to">to</string>
    <string name="volume_slider">Volume Slider</string>

    <string name="media">Media</string>
    <string name="notification">Notification</string>
    <string name="call">Call</string>
    <string name="ringtone">Ringtone</string>
    <string name="alarm">Alarm</string>
    <string name="warning">Warning</string>
    <string name="discard_profile">Do you want to discard the changes to this profile?</string>
    <string name="save">Save</string>
    <string name="add_profile_successful">New profile Added!</string>
    <string name="add_profile_fail">Something went wrong while adding new profile!</string>
    <string name="update_profile_successful">Profile Updated!</string>
    <string name="update_profile_fail">Something went wrong while updating profile!</string>
    <string name="delete_profile_successful">Profile Deleted!</string>
    <string name="delete_profile_fail">Something went wrong while Deleting profile!</string>
    <string name="no_profiles">No Profiles</string>
    <string name="add">Add</string>
    <string name="invalid_profile_credentials">Invalid Profile Credentials!</string>

    <string name="delete_profile_question">Are you sure to delete this profile?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="add_profile_header">Add Profile</string>
    <string name="edit_profile_header">Edit Profile</string>
    <string name="menu_add_edit_profile">Add/Edit</string>
    <string name="sun">S</string>
    <string name="mon">M</string>
    <string name="tue">T</string>
    <string name="wed">W</string>
    <string name="thu">T</string>
    <string name="fri">F</string>
    <string name="sat">S</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="weekday_picker">Weekday Picker</string>
    <string name="time">Time</string>
    <string name="volume_settings">Volume Settings</string>
    <string name="do_not_disturb">Do Not Disturb(DND)</string>
    <string name="empty_time">--:--</string>
    <string name="dnd">DND</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="display">Display</string>
    <string name="try_it">Try it</string>
    <string-array name="themes">
        <item>System Default</item>
        <item>Light</item>
        <item>Dark</item>
        <item>Auto-Battery Dark</item>
    </string-array>

    <string name="def_theme">System Default</string>
    <string name="def_theme_value">MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="key_theme_selected">App_Theme</string>
    <string name="notice">Note</string>
    <string name="dnd_required">DND Permission Required</string>
    <string name="dnd_rationale">Profiles with DND enabled won\'t work without the DND permission.</string>
    <string name="no_thanks">No, Thanks</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="dnd_rationale_2">This icon in the profile means that the profile won\'t run without the DND permission. Go to Settings to grant the permission.</string>
    <string name="time_invalid">Time Invalid or not selected.</string>
    <string name="days_not_selected">Week Days not selected.</string>
    <string name="volume_settings_not_selected">Volume Settings not selected.</string>
    <string-array name="themes_values">
        <item>MODE_NIGHT_FOLLOW_SYSTEM</item>
        <item>MODE_NIGHT_NO</item>
        <item>MODE_NIGHT_YES</item>
        <item>MODE_NIGHT_AUTO_BATTERY</item>
    </string-array>

    <string name="ACTION_PROFILE_BROADCAST_RECEIVER_ACTION">android.profiler.PROFILER_BROADCAST_RECEIVER</string>
    <string name="profile_fetch_successful">Profile Fetched!</string>
    <string name="profile_fetch_un_successful">Profile Fetch Error!</string>
    <string name="priority_only">Priority Only</string>
    <string name="priority_only_summary">This won\'t mute sounds from music, videos, games, or other media.</string>
    <string name="total_silence">Total Silence</string>
    <string name="total_silence_summary">All the Volume Streams will get Silent.</string>
    <string name="alarms_only_summary">Alarms, music or video during this time won\'t get Mute.</string>
    <string name="alarms_only">Alarms Only</string>
    <string name="label">Label</string>
    <string name="no_label">No Label</string>
    <string name="permission_denied_message">Permission is required</string>
    <string name="error_fetch_profiles">Cannot get all the profiles.</string>
    <string name="no_conflict">No Conflict.</string>
    <string name="error_conflict_message">Error saving due to Conflicts with the days of</string>
    <string name="dnd_preference">DND Preference</string>
    <string name="normal">Normal</string>
    <string name="normal_summary">DND will be considered turned off if this is selected.</string>
    <string name="channel_name">Profile Events</string>
    <string name="channel_description">Events of Time in which any Profile applies the profile till any specified time.</string>
    <string name="max_stream_volume">MaxStreamVolume</string>
    <string name="add_or_edit_profile">Add or Edit Profile</string>
    <string name="add_summary">To add a profile click on the icon at the bottom and specify the volume settings and time, Click on the profile in the list to update the settings.</string>
    <string name="delete_a_profile">Delete a profile</string>
    <string name="swipe_left_to_delete_a_profile">Swipe left in the list to delete a profile.</string>
    <string name="extra_help">Use switch to enable or disable a profile.\nDot after label of profile means its running.\n\nVolume settings include 5 volumes and also a DND option. You can set the volume level of this 5 volumes by enabling it first and then clicking on the number located at the right of the volume name in the Add/Edit page of the profile.</string>
    <string name="no_error">No Error</string>
    <string name="end_time_error">End time must be smaller than 12:00 AM</string>
</resources>