<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_between_views">

    <RadioGroup
        android:id="@+id/radiogrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/normal">

        <RadioButton
            android:id="@+id/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal"
            android:textAppearance="@style/SubHeading"
            android:textColor="@color/text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_between_views_3x5"
            android:paddingEnd="@dimen/padding_between_views_3x5"
            android:paddingBottom="@dimen/padding_between_views_half"
            android:text="@string/normal_summary"
            android:textAppearance="@style/SubHeading"
            android:textColor="?attr/colorControlNormal"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/priority_only"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_only"
            android:textAppearance="@style/SubHeading"
            android:textColor="@color/text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_between_views_3x5"
            android:paddingEnd="@dimen/padding_between_views_3x5"
            android:paddingBottom="@dimen/padding_between_views_half"
            android:text="@string/priority_only_summary"
            android:textAppearance="@style/SubHeading"
            android:textColor="?attr/colorControlNormal"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/total_silence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_silence"
            android:textAppearance="@style/SubHeading"
            android:textColor="@color/text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_between_views_3x5"
            android:paddingEnd="@dimen/padding_between_views_3x5"
            android:paddingBottom="@dimen/padding_between_views_half"
            android:text="@string/total_silence_summary"
            android:textAppearance="@style/SubHeading"
            android:textColor="?attr/colorControlNormal"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/alarm_only"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarms_only"
            android:textAppearance="@style/SubHeading"
            android:textColor="@color/text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_between_views_3x5"
            android:paddingEnd="@dimen/padding_between_views_3x5"
            android:text="@string/alarms_only_summary"
            android:textAppearance="@style/SubHeading"
            android:textColor="?attr/colorControlNormal"
            android:textSize="14sp" />
    </RadioGroup>

</ScrollView>