<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/color_background"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:clipToPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="40dp"
        android:paddingTop="20dp"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/text_color"
                android:drawablePadding="5dp"
                app:drawableTint="@color/text_color"
                app:drawableStartCompat="@drawable/ic_baseline_help_24"
                android:id="@+id/heading_help"
                style="@style/Heading"
                android:text="@string/menu_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_marginTop="10dp"
                android:id="@+id/divider"
                android:background="?attr/colorOnSurface"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <TextView
                android:textColor="@color/text_color"
                android:layout_marginTop="10dp"
                style="@style/Heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_does_this_app_do" />

            <TextView
                android:textColor="@color/text_color"
                style="@style/SubHeading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/app_usage" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>