<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddOrEditProfileFragment">

    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/page_title"
                android:text="@string/add_profile"
                style="@style/Theme.Profiler.TextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:text="@string/start_time"
                    android:fontFamily="@font/roboto_slab"
                    android:textAllCaps="false"
                    app:icon="@drawable/ic_baseline_access_time_24"
                    android:layout_marginEnd="5dp"
                    android:id="@+id/start_time"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textAlignment="center"
                    android:layout_weight="0.3"
                    style="@style/SubHeading"
                    android:text="@string/to"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.button.MaterialButton
                    android:fontFamily="@font/roboto_slab"
                    android:textAllCaps="false"
                    android:text="@string/end_time"
                    app:icon="@drawable/ic_baseline_access_time_24"
                    android:layout_marginStart="5dp"
                    android:id="@+id/end_time"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <com.dpro.widgets.WeekdaysPicker
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                app:highlight_color="?attr/colorPrimary"
                app:background_color="?attr/colorControlNormal"
                android:id="@+id/day_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ViewStub
                android:layout="@layout/volume_list_view_stub"
                android:inflatedId="@+id/v1"
                android:id="@+id/view_stub1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ViewStub
                android:layout="@layout/volume_list_view_stub"
                android:inflatedId="@+id/v2"
                android:id="@+id/view_stub2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ViewStub
                android:layout="@layout/volume_list_view_stub"
                android:inflatedId="@+id/v3"
                android:id="@+id/view_stub3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ViewStub
                android:layout="@layout/volume_list_view_stub"
                android:inflatedId="@+id/v4"
                android:id="@+id/view_stub4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ViewStub
                android:layout="@layout/volume_list_view_stub"
                android:inflatedId="@+id/v5"
                android:id="@+id/view_stub5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>